--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,32 @@
 page-home {
-
+ .background{
+     width: 100%;
+     height: 100%;
+     background: linear-gradient(10deg,#4E5EFC,#4EE7FC);
+ }
+ .scroll-content{
+     text-align: center;
+ }
+ ::-webkit-scrollbar {
+    width: 0px;
+ }
+ ion-card.card{
+     background: rgba(232, 230, 230, 0.6px);
+     border-radius: 10px;
+ }
+ .item{
+     background: rgba(232, 230, 230, 0px);
+ }
+ ion-input{
+     border-bottom: #FD4D73 solid 1px;
+ }
+ .b2{
+     top: 8px;
+ }
+ h1{
+     color: #fff;
+     font-size: 3em;
+     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+     font-weight: lighter;
+ }
 }
